<resources>
    <string name="app_name">Stock Hawk</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill"></string>
    <string name="contentDescription">Add a new stock</string>
    <string name="stock_quotes">Stocks</string>

    <string name="network_toast">Uh-oh! This app requires an internet connection.</string>
    <string name="stocks_absent">Oops! Add new stocks using "+" button.</string>
    <string name="refresh">Refresh</string>
    <string name="symbol_details" formatted="true" translatable="false">%s Details</string>
    <string name="historic_data_compare">Historic Data</string>
    <string name="stockIntentService" translatable="false">StockIntentService</string>
    <string name="desc">Graphically Representing prices of the stocks.</string>
    <string name="graph_content_description">Graph showing prices of the stock over time!</string>
    <string name="no_data_show">Can\'t show you data over time!</string>
    <string name="retry">RETRY</string>
    <string name="empty_view_text">Stocks Data not available!</string>
    <string name="data_error_json">Data not Available</string>
    <string name="data_no_internet">Internet Connection is required!</string>
    <string name="data_error_parse">Unprecedented errors have happened!</string>
    <string name="data_unknown_error">Can\'t identify the problem here!</string>
    <string name="data_server_down">The Yahoo! Server is not responding properly!</string>
    <string name="data_no_error">No errors!</string>
    <string name="invalid_symbol">Invalid Stock Symbol</string>
    <string name="stock_already_saved">This stock is already saved!</string>

    <string name="stock_symbol">Stock Symbol</string>
    <string name="stock_name">Stock Name</string>
    <string name="exchange_name">Exchange Name</string>
    <string name="first_trade">First Trade</string>
    <string name="last_trade">Last Trade</string>
    <string name="currency">Currency</string>
    <string name="bid_price">Bid Price</string>
    <string name="periodic">periodic</string>
    <string name="previous_closed_price">Previous closed price</string>
    <string name="appwidget_text">Stock Hawk</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="month1">1 Month</string>
    <string name="month3">3 Months</string>
    <string name="month6">6 Months</string>
    <string name="year1">1 Year</string>
    <string name="year2">2 Years</string>
    <string name="year5">5 Years</string>
    <string name="maxTime">MAX</string>
    <string name="share">Share</string>
    <string name="share_statement">Hi! These are the Stock details which I want to share with you. </string>

    <string name="query" translatable="false">query</string>
</resources>
