<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4"
            tools:context="com.sam_chordas.android.stockhawk.ui.StockDetailsActivity">
                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:weightSum="2"
                    android:padding="5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stock_symbol"
                            android:contentDescription="@string/stock_symbol"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stock_name"
                            android:contentDescription="@string/stock_name"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exchange_name"
                            android:contentDescription="@string/exchange_name"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/first_trade"
                            android:contentDescription="@string/first_trade"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_trade"
                            android:contentDescription="@string/last_trade"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/currency"
                            android:contentDescription="@string/currency"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bid_price"
                            android:contentDescription="@string/bid_price"
                            android:textAppearance="?android:textAppearanceSmall"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/mStockSymbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/mStockName"
                            android:gravity="start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/mExchangeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/mFirstTrade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/mLastTrade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/mCurrency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/mBidPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:id="@+id/separator"
                    android:background="#ffffff"
                    android:layout_width = "match_parent"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="0.5dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:weightSum="2">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/timeline"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                    </android.support.v7.widget.RecyclerView>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="250dp"/>

                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
